# AMDRPP-Scripts

./: README.md
API-Gen/: README.md  backup.csv  batch_automation.py  batch_processing.csv  dummy.cpp  dummy.hpp  gdf.py  imgaug.csv  new_batch_automation.py  occlusion.cpp  perf_report_generate.py  process.csv  process_ms3.csv  process_ms4.csv  rpp-automate.py  single_batch_automation.py  temp.cpp
API-Gen/MivisionX_automation/: mivisionx.csv  mivisionx_automate.py  write_header.py
GTests/: Readme.md  functions.cpp  tests.cpp
GTests/rpp-test/: CMakeLists.txt  rpp-test.cpp
MiVisionX-Timings/: CMakeLists.txt  ovx_test_old.cpp
Ocl-Unit-Testing/: BatchPD.cpp  CMakeLists.txt  Single.cpp
Test-Gen/Single_Input_Batch_Processing_Test_Code/: Batch_DD.cpp  Batch_DD_D.cpp  Batch_DD_D_C.cpp  Batch_DD_S.cpp  Batch_DS.cpp  Batch_DS_D.cpp  Batch_DS_D_C.cpp  Batch_DS_S.cpp  Batch_PD.cpp  Batch_PD_D.cpp  Batch_PD_D_C.cpp  Batch_PD_S.cpp  Batch_PS.cpp  Batch_PS_D.cpp  Batch_PS_D_C.cpp  Batch_PS_S.cpp  Batch_SD.cpp  Batch_SD_D.cpp  Batch_SD_S.cpp  Batch_SD_S_C.cpp  Batch_SS.cpp  Batch_SS_D.cpp  Batch_SS_S.cpp  Batch_SS_S_C.cpp  CMakeLists.txt  Exe  ROI.cpp  Single.cpp  batch_script.csv  script.py
Test-Scripts/: Support_Code.py  Test_CSV.csv  Test_Script.py
dummy/: shell.sh
dummy/brigntness_HIP/: Batch_DD_D_C_HIP_PKD.cpp  Batch_DD_HIP_PKD.cpp  Batch_DS_HIP_PKD.cpp  Batch_SS_HIP_PKD.cpp  CMakeLists.txt
dummy/brigntness_HOST/: Batch_DD_D_C_HOST_PKD.cpp  Batch_DD_HOST_PKD.cpp  Batch_DS_HOST_PKD.cpp  Batch_SS_HOST_PKD.cpp
dummy/brigntness_OCL/: Batch_DD_D_C_OCL_PKD.cpp  Batch_DD_OCL_PKD.cpp  Batch_DS_OCL_PKD.cpp  Batch_SS_OCL_PKD.cpp  CMakeLists.txt
hip-unit test/: BatchPD.cpp  CMakeLists.txt  Single .cpp  Single.cpp
host-Unit-Testing/: BatchPD.cpp  Single.cpp
